<resources>
    <string name="app_name">GitHubUser</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Nama Profile</string>
    <string name="username">Username</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="avatar">Avatar</string>
    <string name="favToggle">ToggleButton</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="darkmode">Darkmode</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>